--- a/tools/debug/qemu/Makefile
+++ b/tools/debug/qemu/Makefile
@@ -79,9 +79,9 @@ QEMU_FLAGS += $(BLOCK_DEVICE)
 # Rootfs
 # -----------------------------------
 ifdef CONFIG_QEMU_ROOTFS_NAME
-ROOTFS := -hda $(srctree)/$(CONFIG_QEMU_ROOTFS_NAME)
+ROOTFS := -hda $(CONFIG_QEMU_ROOTFS_NAME)
 else
-ROOTFS := -hda $(srctree)/BiscuitOS-0.11.img
+ROOTFS := -hda BiscuitOS.img
 endif
 
 QEMU_FLAGS += $(ROOTFS)
