--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -2,19 +2,15 @@
 # Automatically generated make config: don't edit
 # BiscuitOS/x86  Kernel Configuration
 #
-CONFIG_TESTCASE=y
 CONFIG_X86=y
-CONFIG_DEBUG_USERLAND=y
 CONFIG_QEMU_MEMORY_SIZE=16
 CONFIG_HARDDISK=y
 CONFIG_QEMU_BOOT_FLOPPY=y
 CONFIG_BOOTLOADER=y
 CONFIG_RAMDISK=y
 CONFIG_GDB=y
+CONFIG_QEMU_ROOTFS_NAME="BiscuitOS.img"
 CONFIG_DEBUG_KERNEL=y
 CONFIG_DEBUG_BOOTLOADER=y
-CONFIG_DEBUG_VFS=y
 CONFIG_QEMU=y
-CONFIG_DEBUG_VFS_MINIXFS=y
-CONFIG_DEBUG_MINIXFS_BLOCK=y
 CONFIG_EMULATE_RUNNING_SYSTEM=y
